@@ -19,11 +19,16 @@ from typing import Any
 import pytest
 
 from astrapy import Database
+from astrapy.api_options import APIOptions, SerdesOptions
 from astrapy.data_types import DataAPIVector
 from astrapy.exceptions import CollectionInsertManyException, DataAPIResponseException
 from astrapy.info import CollectionDefinition
 
-from ..conftest import HEADER_EMBEDDING_API_KEY_OPENAI, DefaultCollection
+from ..conftest import (
+    HEADER_EMBEDDING_API_KEY_OPENAI,
+    IS_ASTRA_DB,
+    DefaultCollection,
+)
 
 
 @pytest.mark.skipif(
@@ -40,11 +45,19 @@ class TestCollectionVectorizeMethodsSync:
         col = sync_empty_service_collection
         service_vector_dimension = service_collection_parameters["dimension"]
 
+        # TODO we lift storage of binencoded vectors on nonAstra because docker image
+        # 1.0.20-ct1 does not have fix 1738 yet (long nonindexed binenc strings)
+        binencoptions = APIOptions(
+            serdes_options=SerdesOptions(binary_encode_vectors=IS_ASTRA_DB)
+        )
+
         col.insert_one({"t": "tower", "$vectorize": "How high is this tower?"})
         col.insert_one({"t": "vectorless"})
-        col.insert_one({"t": "vectorful", "$vector": [0.01] * service_vector_dimension})
+        col.with_options(api_options=binencoptions).insert_one(
+            {"t": "vectorful", "$vector": [0.01] * service_vector_dimension}
+        )
 
-        col.insert_many(
+        col.with_options(api_options=binencoptions).insert_many(
             [
                 {
                     "t": "guide",
